# leopold

./: NOTICE  README.md  pyproject.toml
MindMaps/: Leopold.py
MindMaps/Leopold/ASA-DEVICES/: ASA_DEVICES.md  edge_firewall01.md
MindMaps/Leopold/IOS-DEVICES/: IOS_DEVICES.md
MindMaps/Leopold/NXOS-DEVICES/: NXOS_DEVICES.md
MindMaps/Leopold/XR-DEVICES/: XR_DEVICES.md
MindMaps/Templates/: device.j2  device_group_members.j2
src/leopold/: leopold.py  nso_csv.j2  nso_html.j2  nso_markdown.j2  nso_mindmap.j2  script.py
